language/move-lang/tests/move_check/parser/function_return_type_missing.exp
error: 

   ┌── tests/move_check/parser/function_return_type_missing.move:3:14 ───
   │
 3 │     fun f(): { }
   │              ^ Unexpected '{'
   ·
 3 │     fun f(): { }
   │              - Expected a type name
   │

