language/move-lang/tests/move_check/parser/function_return_type_missing.move
module M {
    // Test a missing return type (but with a colon)
    fun f(): { }
}
